modificacion de imagenes

--- a/forget.html
+++ b/forget.html
@@ -58,7 +58,7 @@
       <div class="container">
         <div
           class="background-layer"
-          style="background-image: url(/assets/restablecer.jpg)"
+          style="background-image: url(https://res.cloudinary.com/diav64knu/image/upload/v1691964161/samples/ProyectColegio/assets/restablecer_ztro7t.jpg)"
         ></div>
         <div class="item">
           <div class="login-section">
